feat(update): update auth and user endpoints